# pin

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docs/architecture/: README.md  display-system.md  plugin-system.md  pwa-application.md  wifi-configuration.md
docs/development/: getting-started.md
firmware/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
firmware/components/fpc_a005/: CMakeLists.txt  fpc_a005.c
firmware/components/fpc_a005/include/: fpc_a005.h
firmware/components/pin_canvas/: CMakeLists.txt  pin_canvas.c
firmware/components/pin_canvas/include/: pin_canvas.h
firmware/components/pin_plugin_api/: CMakeLists.txt
firmware/components/pin_plugin_api/include/: pin_plugin.h
firmware/main/: CMakeLists.txt  pin_clock_plugin.c  pin_config.c  pin_config.h  pin_display.c  pin_display.h  pin_main.c  pin_ota.c  pin_ota.h  pin_plugin.c  pin_plugin.h  pin_weather_plugin.c  pin_webserver.c  pin_webserver.h  pin_wifi.c  pin_wifi.h
firmware/main/www/: app.js  index.html  manifest.json  sw.js
firmware/plugins/clock/: clock_plugin.c
firmware/web/: app.js  index.html  manifest.json  sw.js
tools/: check_env.sh  test_system.py
